Added skip links to the navigation and main content

--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<ul>
+  <li><a href="#navigation">Skip to navigation</a></li>
+  <li><a href="#main content">Skip to main content</a></a></li>
+</ul>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,7 +14,7 @@
   <header role="banner">
     <img src="images/hbo-logo.svg" width="200">
 
-    <nav role="navigation">
+    <nav role="navigation" id="navigation">
       <ul>
         <li><a href="#">About the Show</a></li>
         <li><a href="#">Featured Characters</a></li>
@@ -18,7 +22,7 @@
     </nav>
   </header>
 
-  <main role="main">
+  <main role="main" id="main content">
     <section>
         <img src="images/the-last-of-us.jpeg" alt="Two main characters of the Last of Us" width="800"/>
         
