--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 
     <nav role="navigation" id="navigation">
       <ul>
-        <li><a href="#">About the Show</a></li>
-        <li><a href="#">Featured Characters</a></li>
+        <li><a href="#About The Show">About the Show</a></li>
+        <li><a href="#Featured Characters">Featured Characters</a></li>
       </ul>
     </nav>
   </header>
 
   <main role="main" id="main content">
-    <section>
+    <section id="About The Show">
         <img src="images/the-last-of-us.jpeg" alt="Two main characters of the Last of Us" width="800"/>
         
         <h1>The Last of Us</h1>
@@ -33,9 +33,9 @@
         <p>A series based on the critically acclaimed video game -- and starring Pedro Pascal and Bella Ramsey, among others -- is available now on HBO and HBO Max.</p>
     </section>
 
-    <section>
+    <section id="Featured Characters">
 
-      <h1>Featured characters</h1>
+      <h1>Featured characters</h1> 
 
       <article>
         <h3>Joel</h3>
